--- a/index.html
+++ b/index.html
@@ -1,1 +1,111 @@
-    <!-- dummy comment hello, this is chava -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Shortly</title>
+</head>
+<body>
+    <header>
+        <img src="images/logo.svg" alt="">
+        <nav>
+            <button class="hamburger"></button>
+            <ul>Features</ul>
+            <ul>Pricing</ul>
+            <ul>Resources</ul>
+            <ul>Login</ul>
+            <button>Sing Up</button>
+        </nav>
+    </header>
+    <main>
+        <section class="hero-wrapper">
+            <img src="images/illustration-working.svg" alt="">
+            <div class="hero-wrapper">
+                <h1>More than just shorter links</h1>
+                <p>Build your brand’s recognition and get detailed insights 
+                    on how your links are performing.</p>
+                <button>Get Started</button>
+            </div>
+        </section>
+        <section class="search-wrapper">
+            <input type="text" name="" id="" placeholder="Shorten a link here...">
+            <button class="rectangle-button"> Shorten It!</button>
+        </section>
+
+        <section class="statistics-wrapper">
+            <div>
+                <h2>Advanced Statistics</h2>
+                <p>Track how your links are performing across the web with our 
+                    advanced statistics dashboard.</p>
+            </div>
+            <div class="cards-wrapper">
+                <div  class="card">
+                    <img src="images/icon-brand-recognition.svg" alt="">
+                    <h3>Brand Recognition</h3>
+                    <p>Boost your brand recognition with each click. Generic links don’t 
+                        mean a thing. Branded links help instil confidence in your content.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icon-detailed-records.svg" alt="">
+                    <h3>Detailed Records</h3>
+                    <p>Gain insights into who is clicking your links. Knowing when and where 
+                        people engage with your content helps inform better decisions.</p>
+                </div>
+                <div class="card">
+                    <img src="images/icon-fully-customizable.svg" alt="">
+                    <h3>Fully Customizable</h3>
+                    <p>Improve brand awareness and content discoverability through customizable 
+                        links, supercharging audience engagement.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="boost-wrapper">
+            <h2>Boost your links today</h2>
+            <button>Get Started</button>
+        </section>
+    </main>
+    <footer>
+        <img src="images/logo.svg" alt="">
+        <div  class="footer-links">
+            <h4>Features</h4>
+            <nav>
+                <ul>
+                    <li>Link Shortening</li>
+                    <li>Branded Links</li>
+                    <li>Analytics</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer-links">
+            <h4>Resources</h4>
+            <nav>
+                <ul>
+                    <li>Blog</li>
+                    <li>Developers</li>
+                    <li>Support</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="footer-links">
+            <h4>Company</h4>
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Our Team</li>
+                    <li>Careers</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <img src="images/icon-facebook.svg" alt="">
+            <img src="images/icon-twitter.svg" alt="">
+            <img src="images/icon-pinterest.svg" alt="">
+            <img src="images/icon-instagram.svg" alt="">
+        </div>
+    </footer>
+</body>
+</html>
