heading part 1: desktop

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 <body>
     <header>
         <img src="images/logo.svg" alt="">
-        <nav>
-            <button class="hamburger"></button>
-            <ul>Features</ul>
-            <ul>Pricing</ul>
-            <ul>Resources</ul>
-            <ul>Login</ul>
-            <button>Sing Up</button>
+        <button class="hamburger"></button>
+        <nav>            
+            <ul>
+                <li><a href="">Features</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Resources</a></li>
+            </ul>
+            <ul>
+                <li><a href="">Login</a></li>
+                <li class="sign-up-button"><button>Sign Up</button></li>
+            </ul>   
         </nav>
     </header>
     <main>
