added background color and modified things, commit to pull

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 
         <section class="statistics-wrapper">
-            <div>
+            <div class="main-paragraph">
                 <h2>Advanced Statistics</h2>
                 <p>Track how your links are performing across the web with our 
                     advanced statistics dashboard.</p>
