--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
     <main>
         <section class="hero-wrapper">
-            <!-- <img src="images/illustration-working.svg" alt=""> -->
-            <div class="hero-wrapper">
+            <img src="images/illustration-working.svg" alt="">
+            <div class="hero-content">
                 <h1>More than just shorter links</h1>
                 <p>Build your brand’s recognition and get detailed insights 
                     on how your links are performing.</p>
