Header and hero image fixed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
     <main>
         <!-- Section 1 -->
         <section class="hero-wrapper">
-            <img src="images/illustration-working.svg" alt="">
+            <div class="hero-image">            
+                <img src="images/illustration-working.svg" alt="">
+            </div>
+
             <div class="hero-content">
                 <h1>More than just shorter links</h1>
                 <p>Build your brand’s recognition and get detailed insights 
