--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     advanced statistics dashboard.</p>
             </div>
             <div class="cards-wrapper">
-                <div  class="card">
+                <div  class="card line-cyan">
                     <div class="icon">
                         <img src="images/icon-brand-recognition.svg" alt="">
                     </div>
@@ -64,7 +64,7 @@
                     <p>Boost your brand recognition with each click. Generic links don’t 
                         mean a thing. Branded links help instil confidence in your content.</p>
                 </div>
-                <div class="card">
+                <div class="card line-cyan">
                     <div>
                         <img src="images/icon-detailed-records.svg" alt="">
                     </div>
