--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <!-- Header -->
     <header>
         <img src="images/logo.svg" alt="">
-        <button class="hamburger"></button>
+        <input type="checkbox" id="mycheckbox">
+        <label for="mycheckbox"></label>
         <nav>            
             <ul>
                 <li><a href="">Features</a></li>
@@ -25,6 +26,7 @@
                 <li class="sign-up-button"><button>Sign Up</button></li>
             </ul>   
         </nav>
+
     </header>
     <!-- Main -->
     <main>
